fix height issue when content overflows body

--- a/assets/stylesheets/base.css
+++ b/assets/stylesheets/base.css
@@ -1,6 +1,9 @@
+html{
+    height: 100%;
+}
 body {
     margin: 0 auto;
-    padding: 0 0 50px;
+    padding: 0 0 0 0;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     -moz-font-smoothing: antialiased;
@@ -13,6 +16,7 @@ body {
     font-weight: 300;
     font-size: 18px;
     color: #797875;
+    height: 100%;
 }
 
 h1, h2, h3 {
@@ -44,10 +48,7 @@ a:hover {
 .rainbow,.rainbow-static{
     background-color: #f069a1;
     width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    bottom: 0;
+    height: auto;
     -webkit-transition: background-color 1000ms linear;
     -moz-transition: background-color 1000ms linear;
     -o-transition: background-color 1000ms linear;
@@ -62,12 +63,13 @@ a:hover {
 #cate-editable{
     width: 70%;
     margin: 0 auto;
-    margin-top: 70px;
+    padding-top: 70px;
     line-height: 1.5;
+    padding-bottom: -70px;
 }
 
 #reuse{
-    position: absolute;
+    position: fixed;
     top: 30px;
     right: 30px;
     z-index: 100;
@@ -135,4 +137,12 @@ a:hover {
     background-color: rgba(255, 255, 255, 0.8);
     outline: none;
     color: rgba(0, 0, 0, 0.8) !important;
+}
+
+i {
+    font-style: italic !important;
+}
+
+b {
+    font-weight: bold !important;
 }
